Forms, POST Requests, File Handling - Flask Tutorial Series #4 FINISHED

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,4 +27,29 @@
         <input type="file" name="file" accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel, text/plain" required="required">
         <input type="Submit" value="Upload File">
     </form>
+
+    <h1>JavaScript JSON Request</h1>
+    <button id="post_button">Send POST Request</button>
+
+    <script type="text/javascript">
+        const postButton = document.getElementById('post_button');
+
+        const jsonData = {name: 'Mike', greeting: 'Hello'}
+
+        postButton.addEventListener('click', () => {
+            fetch('{{ url_for("handle_post") }}', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json; charset=utf-8'
+                },
+                body: JSON.stringify(jsonData)
+            })
+                .then(response => response.json())
+                .then(data => console.log('Success:', data))
+                .catch((error) => {
+                console.error('Error:', error)
+            });
+        });
+
+    </script>
 {% endblock %}
