--- a/templates/base.html
+++ b/templates/base.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Default value{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
 
     {% block content %}{% endblock %}
+    <script src="/js/bootstrap.js"></script>
 </body>
 </html>
